--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ config/application.yml
 /vendor/assets/bower_components
 *.bowerrc
 bower.json
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
